# FaceSynchronization

./: .gitignore  CMakeLists.txt  README.txt
src/: BlendShapeDemo.cpp  DrawObject.cpp  DrawObject.h  FIR.cpp  FIR.h  Filter.cpp  Filter.h  RecordVideo.cpp  TrackAnd3DEstimate.cpp  applyTrackerAndShow.cpp  display.cpp  display.h  global.cpp  global.h  main.cpp  structs.h  tiny_obj_loader.h  trackball.h  util.h  windowdump.cpp
